--- a/style.css
+++ b/style.css
@@ -77,3 +77,17 @@ p {
     background-color: lightgreen;
     clear: both
 }
+
+#prawo12 {
+    margin-top: 33.15%;
+    width: 20%;
+    height: 33%;
+    background-color: aqua;
+}
+
+#prawo42 {
+    float: right;
+    width: 20%;
+    height: 33%;
+    background-color: aqua;
+}
